AFS_Dev/src/objects/Approval__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <inlineHelpText>This field will be updated with the date the opportunity record was approved by the Sales Ops.</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Method__c</fullName>
        <label>Approval Method</label>
        <picklist>
            <picklistValues>
                <fullName>Offline Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Committee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Notes__c</fullName>
        <label>Approval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Stage__c</fullName>
        <inlineHelpText>Once the opportunity record has been approved, the Sales Ops will update this field with the appropriate approved stage.</inlineHelpText>
        <label>Approved Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <label>Approver Role</label>
        <picklist>
            <picklistValues>
                <fullName>CAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS Sales Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS BPO Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS MC Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS TGP Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TGP Capability Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TGP Capability Group Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Approver</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Approval</label>
    <nameField>
        <displayFormat>App-{0000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>